# vscode-server-bin

./: README.md  pyproject.toml
.github/workflows/: cronjob.yaml  release.yaml
hack/: cron_job.py  tools.py
vscode_server_bin/: __main__.py  vscode-commit-id
