[tool.poetry]
name = "vscode-server-bin"
version = "0.1.0"
description = ""
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
repository = "https://github.com/zen-xu/vscode-server-bin"
include = [
    { path = "vscode_server_bin/bin.tar.gz", format = [
        "wheel",
    ] },
    { path = "vscode_server_bin/vscode-commit-id", format = [
        "wheel",
    ] },
]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
