[tool.poetry]
name = "vscode-server-bin"
version = "1.77.1"
description = ""
authors = [
    "ZhengYu, Xu <zen-xu@outlook.com>",
]
repository = "https://github.com/zen-xu/vscode-server-bin"

[[tool.poetry.include]]
path = "vscode_server_bin/bin.tar.gz"
format = [
    "wheel",
]

[[tool.poetry.include]]
path = "vscode_server_bin/vscode-commit-id"
format = [
    "wheel",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sh = "^1.14.3"
requests = "^2.28.1"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
typer = "^0.7.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
